gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/staticforeach1.d
version https://git-lfs.github.com/spec/v1
oid sha256:5eaf8d23ebdf2ea02233a17ac45f7819eacff59769bcaaedb1561f46cfbae2c4
size 190
